DCMD parser fails to recognize one character argument when it's positioned last

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 7, 8, 9
    • Component/s: hotspot
    • svc
    • b43

        DCMD parser incorrectly ignores the last character in the argument list line when it comprises a one character argument.

        Eg. having `IntegerFlag 1` parsed would ignore '1' completely.

              Assignee:
              Jaroslav Bachorík
              Reporter:
              Jaroslav Bachorík
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: