8065783: DCMD parser fails to recognize one character argument when it's positioned last

Reviewed-by: sla, egahlin, fparain